--- a/css/main.css
+++ b/css/main.css
@@ -1245,11 +1245,44 @@ footer {
   padding-bottom: 60px;
 }
 
+/* Флекс бокс всего футера */
+.footer-flexBox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media screen and (max-width: 480px) {
+  .footer-flexBox {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .footer-flexBox {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .footer-flexBox {
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    padding-bottom: 28px;
+    margin-bottom: 18px;
+  }
+}
+
 .logo-font-footer {
   display: inline-block;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .logo-font-footer {
     font-size: 24px;
     line-height: 1.17;
@@ -1263,7 +1296,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .footer-addressBox {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1276,6 +1309,14 @@ footer {
         -ms-flex-align: center;
             align-items: center;
     margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .footer-addressBox {
+    margin-left: 61px;
+    margin-right: 165px;
+    width: 232px;
   }
 }
 
@@ -1310,7 +1351,7 @@ footer {
 }
 
 /* Отступы спика контактов футера UL */
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .footer-address-ul {
     padding: 0;
     display: -webkit-box;
@@ -1323,6 +1364,12 @@ footer {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .footer-address-ul {
+    padding: 0;
   }
 }
 
@@ -1340,32 +1387,6 @@ footer {
 @media screen and (min-width: 769px) {
   .footer-address-list:not(:last-child) {
     margin-top: 9px;
-  }
-}
-
-/* Флекс бокс всего футера */
-.footer-flexBox {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-@media screen and (max-width: 480px) {
-  .footer-flexBox {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-
-@media screen and (min-width: 769px) {
-  .footer-flexBox {
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
-    padding-bottom: 28px;
-    margin-bottom: 18px;
   }
 }
 
