--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -731,21 +731,25 @@ footer {
 /* Стили заголовков футера */
 .footer-title {
   margin-top: 0;
+  font-size: 14px;
+  line-height: 1.14;
 }
 
 @media screen and (max-width: 480px) {
   .footer-title {
     margin-bottom: 20px;
-    font-size: 14px;
-    line-height: 1.14;
     font-weight: 500;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .footer-title {
+    margin-bottom: 20px;
   }
 }
 
 @media screen and (min-width: 769px) {
   .footer-title {
-    font-size: 14px;
-    line-height: 1.14;
     letter-spacing: 0.03em;
     margin-bottom: 21px;
     display: block;
@@ -797,7 +801,7 @@ footer {
 
 /* Отступы поля форма футер === Блок Форма======== */
 /* Отступы блока Форма */
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .footerMail-box {
     margin: 0;
     display: -webkit-box;
@@ -813,6 +817,13 @@ footer {
   }
 }
 
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .footerMail-box {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 @media screen and (min-width: 769px) {
   .footerMail-box {
     margin-left: 93px;
@@ -825,7 +836,7 @@ footer {
   display: flex;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .footer-form {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -854,7 +865,7 @@ footer {
   padding: 18px 12px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .input-email {
     width: 450px;
     margin-bottom: 20px;
