--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -332,22 +332,22 @@ header {
 
 /* Стили ссылок =======================  ФИЛЬТРЫ  ============== */
 .filter {
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  letter-spacing: 0.03em;
+  color: #212121;
+  background-color: #f5f4fa;
   padding-left: 22px;
   padding-right: 22px;
   padding-top: 6px;
   padding-bottom: 6px;
-  color: #212121;
-  text-decoration: none;
-  background-color: #f5f4fa;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
-  text-align: center;
-  letter-spacing: 0.03em;
   -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
-  display: inline-block;
   -webkit-transition-property: background-color, color;
   transition-property: background-color, color;
   -webkit-transition-duration: 250ms;
@@ -366,8 +366,12 @@ header {
   margin-right: 8px;
 }
 
-/* Оступы фильтра */
-/* Правый отступ фильтров */
+@media screen and (max-width: 480px) {
+  .filter-list:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
+}
+
 /* Отступы фильтров */
 .works-filter-ul {
   display: -webkit-box;
@@ -379,6 +383,16 @@ header {
   padding-left: 0;
   text-align: center;
   margin-bottom: 20px;
+}
+
+@media screen and (max-width: 480px) {
+  .works-filter-ul {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
 }
 
 /* Интерактивные действия с фильтрами*/
