--- a/sass/components/portfolio/_comp-portfolio-filters.scss
+++ b/sass/components/portfolio/_comp-portfolio-filters.scss
@@ -18,22 +18,22 @@ header {
 
 /* Стили ссылок =======================  ФИЛЬТРЫ  ============== */
 .filter {
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  letter-spacing: 0.03em;
+  color: $secondary-text-color;
+  background-color: $filter-bg;
   padding-left: 22px;
   padding-right: 22px;
   padding-top: 6px;
   padding-bottom: 6px;
-  color: $secondary-text-color;
-  text-decoration: none;
-  background-color: $filter-bg;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
-  text-align: center;
-  letter-spacing: 0.03em;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 3px 1px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
-  display: inline-block;
   transition-property: background-color, color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -47,17 +47,12 @@ header {
       margin-right: 8px;
     }
   }
+  @media screen and (max-width: 480px) {
+    &-list:nth-child(-n + 3) {
+      margin-bottom: 15px;
+    }
+  }
 }
-
-/* Оступы фильтра */
-// .filter-list {
-//   display: block;
-// }
-
-/* Правый отступ фильтров */
-// .filter-list:not(:last-child) {
-//   margin-right: 8px;
-// }
 
 /* Отступы фильтров */
 .works-filter-ul {
@@ -66,6 +61,11 @@ header {
   padding-left: 0;
   text-align: center;
   margin-bottom: 20px;
+
+  @media screen and (max-width: 480px) {
+    flex-wrap: wrap;
+    justify-content: start;
+  }
 }
 
 /* Интерактивные действия с фильтрами*/
