--- a/sass/components/_components-footer.scss
+++ b/sass/components/_components-footer.scss
@@ -12,6 +12,7 @@ footer {
 
   @media screen and (max-width: 480px) {
     flex-direction: column;
+    align-items: center;
   }
 
   @media screen and (min-width: 481px) and (max-width: 768px) {
