--- a/sass/components/portfolio/_comp-portfolio-filters.scss
+++ b/sass/components/portfolio/_comp-portfolio-filters.scss
@@ -60,11 +60,16 @@ header {
   justify-content: center;
   padding-left: 0;
   text-align: center;
-  margin-bottom: 20px;
+  margin: 0;
 
   @media screen and (max-width: 480px) {
     flex-wrap: wrap;
     justify-content: start;
+    margin-bottom: 10px;
+  }
+
+  @media screen and (min-width: 769px) {
+    margin-bottom: 20px;
   }
 }
 
