--- a/sass/components/portfolio/_comp-portfolio-works.scss
+++ b/sass/components/portfolio/_comp-portfolio-works.scss
@@ -35,15 +35,22 @@
 .work-list {
   position: relative;
   margin-top: 30px;
-  width: calc((1170px - 60px) / 3);
+
   cursor: pointer;
   overflow: hidden;
 
   /* transition - одной строкой */
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:not(:nth-child(3n)) {
-    margin-right: 30px;
+  @media screen and (min-width: 481px) {
+    &:not(:nth-child(3n)) {
+      margin-right: 30px;
+      width: 450px;
+    }
+  }
+
+  @media screen and (min-width: 769px) {
+    width: calc((1170px - 60px) / 3);
   }
 }
 
@@ -57,6 +64,11 @@
   display: flex;
   padding-left: 0;
   flex-wrap: wrap;
+
+  @media screen and (max-width: 480px) {
+    width: 450px;
+    margin-right: 0;
+  }
 }
 
 /* Свойства блока карточки товара  */
@@ -78,6 +90,10 @@
     border-bottom: 1px solid #eeeeee;
     z-index: 2;
   }
+
+  @media screen and (max-width: 480px) {
+    width: 450px;
+  }
 }
 
 /* Скрытый блок на карточке */
@@ -94,21 +110,11 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1),
     cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 0;
-}
 
-/* Бордеры и отступы контента карточек работ */
-// .card-content {
-//   position: relative;
-//   padding-left: 24px;
-//   padding-right: 24px;
-//   padding-top: 20px;
-//   padding-bottom: 20px;
-//   background-color: $white-bg-color;
-//   border-left: 1px solid #eeeeee;
-//   border-right: 1px solid #eeeeee;
-//   border-bottom: 1px solid #eeeeee;
-//   z-index: 2;
-// }
+  @media screen and (max-width: 480px) {
+    width: 450px;
+  }
+}
 
 /* Текст в скрытом блоке на карточке */
 .card-hideText {
@@ -117,10 +123,14 @@
   letter-spacing: 0.03em;
   color: $white-bg-color;
   background-color: $accent-color-blue;
-  width: calc((1170px - 60px) / 3);
+  width: 450px;
   height: 294px;
   padding: 64px 24px 63px;
   margin: 0;
+
+  @media screen and (min-width: 769px) {
+    width: calc((1170px - 60px) / 3);
+  }
 }
 
 /* Интерактивные действия с карточками  */
