--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -411,8 +411,15 @@ header {
 
 /* Отступы секции Примеры работ=============ПРИМЕРЫ РАБОТ========== */
 .works {
-  padding-top: 93px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 769px) {
+  .works {
+    padding-top: 93px;
+    padding-bottom: 94px;
+  }
 }
 
 /* Стили секции Примеры работ */
@@ -453,6 +460,7 @@ header {
   margin-top: 30px;
   cursor: pointer;
   overflow: hidden;
+  width: 450px;
   /* transition - одной строкой */
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -460,16 +468,21 @@ header {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 481px) {
-  .work-list:not(:nth-child(3n)) {
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .work-list {
+    width: 354px;
+  }
+  .work-list:not(:nth-child(2n)) {
     margin-right: 30px;
-    width: 450px;
   }
 }
 
 @media screen and (min-width: 769px) {
   .work-list {
     width: calc((1170px - 60px) / 3);
+  }
+  .work-list:not(:nth-child(3n)) {
+    margin-right: 30px;
   }
 }
 
@@ -478,14 +491,20 @@ header {
   margin-bottom: 0;
 }
 
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .logo.title {
+    white-space: nowrap;
+  }
+}
+
 /* Отступы списка работ */
 .works-exampl-ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-left: 0;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  padding-left: 0;
 }
 
 @media screen and (max-width: 480px) {
@@ -522,6 +541,12 @@ header {
   }
 }
 
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .card {
+    width: 354px;
+  }
+}
+
 /* Скрытый блок на карточке */
 .hidden-box {
   position: absolute;
@@ -550,6 +575,18 @@ header {
   }
 }
 
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .hidden-box {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .hidden-box {
+    width: calc((1170px - 60px) / 3);
+  }
+}
+
 /* Текст в скрытом блоке на карточке */
 .card-hideText {
   font-size: 18px;
@@ -561,6 +598,12 @@ header {
   height: 294px;
   padding: 64px 24px 63px;
   margin: 0;
+}
+
+@media screen and (min-width: 481px) {
+  .card-hideText {
+    width: 354px;
+  }
 }
 
 @media screen and (min-width: 769px) {
