--- a/sass/components/portfolio/_comp-portfolio-works.scss
+++ b/sass/components/portfolio/_comp-portfolio-works.scss
@@ -1,7 +1,12 @@
 /* Отступы секции Примеры работ=============ПРИМЕРЫ РАБОТ========== */
 .works {
-  padding-top: 93px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 769px) {
+    padding-top: 93px;
+    padding-bottom: 94px;
+  }
 }
 
 /* Стили секции Примеры работ */
@@ -35,35 +40,43 @@
 .work-list {
   position: relative;
   margin-top: 30px;
-
   cursor: pointer;
   overflow: hidden;
-
+  width: 450px;
   /* transition - одной строкой */
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media screen and (min-width: 481px) {
-    &:not(:nth-child(3n)) {
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    width: 354px;
+
+    &:not(:nth-child(2n)) {
       margin-right: 30px;
-      width: 450px;
     }
   }
 
   @media screen and (min-width: 769px) {
     width: calc((1170px - 60px) / 3);
+
+    &:not(:nth-child(3n)) {
+      margin-right: 30px;
+    }
   }
 }
 
 /* Отступы заголовков Примеров работ */
 .logo.title {
   margin-bottom: 0;
+
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    white-space: nowrap;
+  }
 }
 
 /* Отступы списка работ */
 .works-exampl-ul {
   display: flex;
-  padding-left: 0;
   flex-wrap: wrap;
+  padding-left: 0;
 
   @media screen and (max-width: 480px) {
     width: 450px;
@@ -94,6 +107,10 @@
   @media screen and (max-width: 480px) {
     width: 450px;
   }
+
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    width: 354px;
+  }
 }
 
 /* Скрытый блок на карточке */
@@ -114,6 +131,14 @@
   @media screen and (max-width: 480px) {
     width: 450px;
   }
+
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    width: 354px;
+  }
+
+  @media screen and (min-width: 769px) {
+    width: calc((1170px - 60px) / 3);
+  }
 }
 
 /* Текст в скрытом блоке на карточке */
@@ -127,6 +152,10 @@
   height: 294px;
   padding: 64px 24px 63px;
   margin: 0;
+
+  @media screen and (min-width: 481px) {
+    width: 354px;
+  }
 
   @media screen and (min-width: 769px) {
     width: calc((1170px - 60px) / 3);
