--- a/sass/components/_components-modal-hero.scss
+++ b/sass/components/_components-modal-hero.scss
@@ -13,28 +13,17 @@
   transition: opacity 250ms ease-in;
   z-index: 999;
 
-  /* Скрытие модалки */
   &.is-hidden {
     opacity: 0;
     pointer-events: none;
+    /* Скрытие модалки */
 
-    /* Состояние окна формы при включенном is-hidden */
     & .modal {
       transform: translate(-50%, -50%) scale(0.9);
+      /* Состояние окна формы при включенном is-hidden */
     }
   }
 }
-
-/* Скрытие модалки */
-// .backdrop.is-hidden {
-//   opacity: 0;
-//   pointer-events: none;
-// }
-
-/* Состояние окна формы при включенном is-hidden */
-// .backdrop.is-hidden .modal {
-//   transform: translate(-50%, -50%) scale(0.9);
-// }
 
 /* Стили окна формы */
 .modal {
@@ -45,16 +34,22 @@
   left: 50%;
   max-height: 800px;
   min-height: 400px;
-  width: 528px;
+  width: 450px;
   padding: 40px;
   background-color: rgb(255, 255, 255);
+
+  /* Переход ======================================= */
   transform: translate(-50%, -50%) scale(1);
   transition: transform 200ms ease-in;
-  /* Переход ======================================= */
+
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   align-items: center;
+
+  @media screen and (min-width: 769px) {
+    width: 528px;
+  }
 }
 
 /* Стили тега формы */
@@ -128,7 +123,6 @@
 /* Анимация меток Label */
 .input-area:focus + .form-label,
 .input-area:not(:placeholder-shown) + .form-label {
-  /* transform: translateY(-40px); */
   transform: translate(-26px, -40px);
   color: $accent-color-blue;
 }
