--- a/css/main.css
+++ b/css/main.css
@@ -660,9 +660,15 @@ textarea {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.7;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 769px) {
+  .policy-text {
+    font-size: 14px;
+  }
 }
 
 /* Стили ссылки в текстк Чекбокса */
@@ -728,10 +734,16 @@ textarea {
   display: inline-block;
   width: 16px;
   height: 15px;
-  margin-left: 12px;
+  margin-left: 0;
   margin-right: 8px;
   border: 2px solid #212121;
   border-radius: 4px;
+}
+
+@media screen and (min-width: 769px) {
+  .checkbox-icon {
+    margin-left: 12px;
+  }
 }
 
 /* Стили иконки Чекбокса при состоянии Чекд */
