--- a/sass/components/_components-modal-hero.scss
+++ b/sass/components/_components-modal-hero.scss
@@ -204,9 +204,13 @@ textarea {
 .policy-text {
   display: flex;
   align-items: center;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.7;
   letter-spacing: 0.03em;
+
+  @media screen and (min-width: 769px) {
+    font-size: 14px;
+  }
 }
 
 /* Стили ссылки в текстк Чекбокса */
@@ -268,10 +272,14 @@ textarea {
     display: inline-block;
     width: 16px;
     height: 15px;
-    margin-left: 12px;
+    margin-left: 0;
     margin-right: 8px;
     border: 2px solid $secondary-text-color;
     border-radius: 4px;
+
+    @media screen and (min-width: 769px) {
+      margin-left: 12px;
+    }
   }
 }
 
