--- a/sass/components/_components-modal-hero.scss
+++ b/sass/components/_components-modal-hero.scss
@@ -13,6 +13,8 @@
   transition: opacity 250ms ease-in;
   z-index: 999;
 
+  overflow-y: scroll;
+
   &.is-hidden {
     opacity: 0;
     pointer-events: none;
