--- a/sass/components/_components-header.scss
+++ b/sass/components/_components-header.scss
@@ -7,7 +7,7 @@
   @media screen and (min-width: 481px) {
     margin-top: 26px;
     margin-bottom: 26px;
-    margin-left: 15px;
+    margin-left: 0;
   }
 
   @media screen and (min-width: 769px) {
@@ -18,6 +18,11 @@
 /* Обнуление отступа <p>-лого  */
 .logo-position {
   margin: 0;
+  width: 141px;
+
+  @media screen and (min-width: 769px) {
+    width: 153px;
+  }
 }
 
 /* Отступы Навигация контакты */
@@ -37,10 +42,13 @@
 
   @media screen and (min-width: 769px) {
     margin-left: auto;
+    margin-top: 32px;
+    margin-bottom: 32px;
     padding: 0;
 
     & > li:first-child {
       margin-right: 30px;
+      margin-bottom: 0;
     }
   }
 }
@@ -176,4 +184,15 @@
   &.is-open .icon-menu {
     display: none;
   }
+
+  @media screen and (min-width: 481px) {
+    display: none;
+  }
+}
+
+.menu-container {
+  // display: none;
+  display: inline-flex;
+  width: 100%;
+  align-items: center;
 }
