Add изображение 1х-2х Героя для 480px-768px-desctop

--- a/sass/components/_components-modal-hero.scss
+++ b/sass/components/_components-modal-hero.scss
@@ -294,3 +294,8 @@ textarea {
   background-origin: border-box;
   background-position: center;
 }
+
+// Блокирует прокрутку Body при открытом модальном окне
+body.modal-open {
+  overflow: hidden;
+}
