--- a/sass/components/_components-hero.scss
+++ b/sass/components/_components-hero.scss
@@ -96,5 +96,74 @@
       rgba(47, 48, 58, 0.8),
       rgba(47, 48, 58, 0.8)
     ),
-    url(../images/hero-bg.jpg);
+    url(../images/hero-mobile1x.jpg);
+}
+
+// Загружает фон Героя @2х при плотноси 2x - mobile
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .hero-box {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/hero-mobile@2x.jpg);
+    background-size: contain;
+  }
+}
+
+// Фон Героя для экрана tablet min 481px
+@media screen and (min-width: 481px) {
+  .hero-box {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/hero-tablet1x.jpg);
+  }
+
+  // Фон Героя @2x для экрана tablet min 481px
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .hero-box {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.8),
+          rgba(47, 48, 58, 0.8)
+        ),
+        url(../images/hero-tablet@2x.jpg);
+      background-size: contain;
+    }
+  }
+}
+
+// Фон Героя для экрана desctop min 769px
+@media screen and (min-width: 769px) {
+  .hero-box {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/hero-desctop1x.jpg);
+  }
+
+  // Фон Героя @2x для экрана desctop min 769px
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .hero-box {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.8),
+          rgba(47, 48, 58, 0.8)
+        ),
+        url(../images/hero-desctop@2x.jpg);
+      background-size: contain;
+    }
+  }
 }
